[gd_scene load_steps=2 format=3 uid="uid://bmwu7t5fqfmd5"]

[ext_resource type="Script" path="res://Scripts/Components/Switch.gd" id="1_rlyjj"]

[node name="Switch" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_rlyjj")
conditions = null
single_fire = null
id_mask = null
on_pressed_effects = null
on_released_effects = null

[connection signal="area_entered" from="." to="." method="_on_enter"]
[connection signal="area_exited" from="." to="." method="_on_exit"]
[connection signal="body_entered" from="." to="." method="_on_enter_body"]
[connection signal="body_exited" from="." to="." method="_on_exit_body"]
